--- a/Project/client/package.json
+++ b/Project/client/package.json
@@ -9,12 +9,12 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/styled-engine-sc": "^5.5.2",
-    "@reduxjs/toolkit": "^1.8.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "init": "^0.1.2",
     "next": "12.1.1",
-    "react": "17.0.2",
+    "react": "^18.0.0",
     "react-calendar": "^3.7.0",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
