--- a/Project/client/package.json
+++ b/Project/client/package.json
@@ -11,12 +11,14 @@
     "@mui/styled-engine-sc": "^5.5.2",
     "@reduxjs/toolkit": "^1.8.1",
     "init": "^0.1.2",
+    "axios": "^0.27.2",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "next": "12.1.1",
     "react": "^18.0.0",
     "react-calendar": "^3.7.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "recharts": "^2.1.9",
     "redux": "^4.1.2",
